[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipython = "^8.18.1"
flake8 = "^6.1.0"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
